--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -35,7 +35,7 @@
                     </td>
                     <td>
                         {% for service in instructor.services %}
-                            <span>{{ service }}</span>
+                            <span class="instructor_services">{{ service }}</span>
                         {% endfor %}
                     </td>
                     <td>
