--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -34,7 +34,7 @@
                         <span style="background-image: url({{ member.avatar_url }}); margin-right: 8px"></span>
                         {{member.name}}</td>
                     <td>
-                        <span>{{ member.email }}</span>
+                        <span class="member_email">{{ member.email }}</span>
                     </td>
                     <td>
                         {{ member.weight }}
